app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiz-app
  namespace: wiz-app
  labels:
    app: wiz-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wiz-app
  template:
    metadata:
      labels:
        app: wiz-app
    spec:
      serviceAccountName: wiz-app-sa
      containers:
        - name: wiz-app
          image: ${gcp-region}-docker.pkg.dev/${GCP_PROJECT_ID}/wiz-app/wiz-app:latest
          ports:
            - containerPort: 3000
              name: http
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 5
