app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiz-app-service
  namespace: wiz-app
  labels:
    app: wiz-app 
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: wiz-app
